# Artificial_Trainer

./: CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/ai/: pickforcedswitch.h  typesum.h
src/ailogic/: estimatedminimax.cc  estimatedminimax.h  expectdfs.cc  expectdfs.h  expectimax.cc  expectimax.h  movenode.cc  movenode.h  pickforcedswitch.cc  pickforcedswitch.h  pickleadingpokemon.cc  pickleadingpokemon.h  typesum.cc  typesum.h
src/battle/: battle.cc  battle.h
src/battlemanager/: battlemanager.cc  battlemanager.h
src/clientelements/: gui.cc  gui.h  inputhandler.cc  inputhandler.h  sanitizer.cc  sanitizer.h
src/gui/: gamestate.cc  gamestate.h  gui.cc  gui.h  menustate.cc  menustate.h
src/move/: accuracy.cc  accuracy.h  baseaccuracy.cc  baseaccuracy.h  basepower.cc  basepower.h  move.cc  move.h  movenames.h  moves.h  movescontainer.cc  movescontainer.h  pp.cc  pp.h  priority.cc  priority.h  usemove.cc  usemove.h
src/pokemon/: Disable.cc  Disable.h  activepokemon.cc  activepokemon.h  beforetransformstate.cc  beforetransformstate.h  bide.cc  bide.h  confusion.cc  confusion.h  disable.cc  disable.h  learnset.cc  learnset.h  pokemon.cc  pokemon.h  species.h  speciesnames.h  statusnames.h  substitute.cc  substitute.h
src/random/: randomgenerator.cc  randomgenerator.h
src/stat/: ev.cc  ev.h  exclusiveingamestat.cc  exclusiveingamestat.h  exclusiveingamestatscontainer.cc  exclusiveingamestatscontainer.h  hp.cc  hp.h  iv.cc  iv.h  normalstat.cc  normalstat.h  normalstatscontainer.cc  normalstatscontainer.h  stat.cc  stat.h  statnames.h  statscontainer.cc  statscontainer.h
src/stringconversions/: stringconverter.cc  stringconverter.h
src/stringconverter/: stringconverter.cc  stringconverter.h
src/team/: team.cc  team.h
src/type/: effectiveness.cc  effectiveness.h  type.cc  type.h  typecontainer.cc  typecontainer.h  typenames.h
