cmake_minimum_required(VERSION 3.13)
project(Artificial_Trainer)

set(CMAKE_CXX_STANDARD 14)

add_executable(Artificial_Trainer src/main.cc src/clientelements/gui.cc src/clientelements/gui.h src/pokemon/speciesnames.h src/pokemon/pokemon.cc src/pokemon/pokemon.h src/stat/statnames.h src/clientelements/sanitizer.cc src/clientelements/sanitizer.h src/team/team.cc src/team/team.h src/stat/stat.cc src/stat/stat.h src/stat/hp.cc src/stat/hp.h src/stat/ev.cc src/stat/ev.h src/stat/iv.cc src/stat/iv.h src/stat/statscontainer.cc src/stat/statscontainer.h src/battle/battle.cc src/battle/battle.h src/stringconverter/stringconverter.h src/stringconverter/stringconverter.cc src/clientelements/inputhandler.cc src/clientelements/inputhandler.h src/move/movenames.h src/move/accuracy.h src/move/accuracy.cc src/move/basepower.h src/move/basepower.cc src/move/pp.h src/move/pp.cc src/type/type.h src/type/type.cc src/type/effectiveness.h src/type/effectiveness.cc src/move/move.cc src/move/move.h src/pokemon/learnset.h src/pokemon/learnset.cc src/move/movescontainer.cc src/move/movescontainer.h)